--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ url: https://llm-chaser.github.io
 # --------------------------------------------------
 owner:
   name: jiajun Wu
-  avatar: images/picture1.jpg
+  avatar: jiajunwu.jpg
   # bio: Dream big, stay positive, work hard, and enjoy the journey.
   email: 8210231904@csu.edu.cn
   #cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
